Mar 13, 2020
  tuned up summary email

Nov 26, 2019
  upgraded to commons-collections4

Oct 8, 2019
  improved logging

v. 2.2.4 (Apr 1, 2019)
  fixed logging

v. 2.2.3 (Sep 25, 2018)
  moved from subversion to github

v. 2.2.2 (May 22, 2017)
  fixed handling of stale data for DO ontology
  -- DO ontology had 'DO' as ontology id, and is using 'DOID:xxx' as accession ids,
  -- what was causing problems in sql query deteting stale rows

v. 2.2.1 (May 9, 2017)
  added cmdline option '*' to run the pipeline for all public ontologies

v. 2.2.0 (Dec 27, 2016)
  updated build system from ANT to GRADLE

v. 2.1.3 (Jun 21, 2016)
  added maintenance script 'fixRogueRows.sh'

v. 2.1.2 (Mar 18, 2015)
  added (Vertebrate Trait) ontology, aspect V, to the list of processed ontologies

v. 2.1.1 (Feb 17, 2015)
  added (Rat Strain) ontology, aspect S, to the list of processed ontologies

v. 2.1.0 (Feb 6, 2015)
  implemented incremental updates, to improve performance
  NOTE: previous code was doing bulk deletes; f.e. for aspect 'E' 220 million rows were deleted
    and Oracle needed 90GB UNDO log -- Stacy was complaining

v. 2.0.0 (Oct 6-9, 2014)
  moved dao code from rgdcore to the pipeline (code for managing FULL_ANNOT_INDEX table is unique
    and not likely to be reused)
  tuned-up batched inserts to use direct-load mode if possible to reduce REDO log usage

v. 1.2.0 (June 19, 2014)
  a single ontology (identified by aspect) could be reliably reloaded at any time without affecting the data
  for other ontologies;
  updated code to latest rgdcore

v. 1.1.0 (June 10, 2014)
  added 'H' (HPO - Human Phenotype) ontology to the list of ontologies processed by the pipeline
  updated code to latest rgdcore