@@ -23,8 +23,8 @@ dependencies {
     compile 'org.apache.commons:commons-collections4:4.4'
     compile 'org.apache.commons:commons-dbcp2:2.7.0'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.springframework:spring-beans:5.1.8.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.8.RELEASE'
+    compile 'org.springframework:spring-beans:5.1.9.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.9.RELEASE'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
